# Task_management

./: .env  .gitignore  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 7c19b5181a5d_create_users_and_tasks.py
app/: main.py
app/core/: security.py
app/database/: database.py
app/dependencies/: auth.py
app/models/: task.py  user.py
app/routers/: auth.py  dashboard.py  tasks.py  users.py
app/schemas/: task.py  user.py
app/utils/: auth.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: Modal.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx  TaskDetail.jsx  Tasks.jsx  Users.jsx
