[project]
name = "self-learn-task-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.138.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
